syntax = "proto3";
package comdex.liquidation.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "comdex/liquidation/v1beta1/params.proto";
import "comdex/liquidation/v1beta1/locked_vault.proto";

option go_package = "github.com/comdex-official/comdex/x/liquidation/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message QueryLockedVaultRequest {
  uint64 id = 1;
}

message QueryLockedVaultResponse {
  LockedVault locked_vault = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"locked_vault\"" ];
}

message QueryLockedVaultsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryLockedVaultsResponse {
  repeated LockedVault locked_vaults = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"locked_vaults\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

message QueryLockedVaultsHistoryRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryLockedVaultsHistoryResponse {
  repeated LockedVault locked_vaults_history = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"locked_vaults_history\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryUserLockedVaultsRequest {
  string user_address = 1 [ (gogoproto.moretags) = "yaml:\"user_address\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryUserLockedVaultsResponse {
  repeated LockedVault user_locked_vaults = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"user_locked_vaults\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryUserLockedVaultsHistoryRequest {
  string user_address = 1 [ (gogoproto.moretags) = "yaml:\"user_address\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryUserLockedVaultsHistoryResponse {
  repeated LockedVault user_locked_vaults_history = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"user_locked_vaults_history\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryLockedVaultsPairRequest {
  uint64 PairId = 1 [ (gogoproto.moretags) = "yaml:\"Pair_Id\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryLockedVaultsPairResponse {
  repeated LockedVault locked_vaults_pair = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"user_locked_vaults_pair\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

service QueryService {
  rpc QueryLockedVault(QueryLockedVaultRequest) returns (QueryLockedVaultResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/locked_vault/{id}";
  }
  rpc QueryLockedVaults(QueryLockedVaultsRequest) returns (QueryLockedVaultsResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/locked_vaults";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/params";
  }
  rpc QueryLockedVaultsHistory(QueryLockedVaultsHistoryRequest) returns (QueryLockedVaultsHistoryResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/locked_vaults_history";
  }
  rpc QueryUserLockedVaults(QueryUserLockedVaultsRequest) returns (QueryUserLockedVaultsResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/user_locked_vaults";
  }
  rpc QueryUserLockedVaultsHistory(QueryUserLockedVaultsHistoryRequest) returns (QueryUserLockedVaultsHistoryResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/user_locked_vaults_history";
  }
  rpc QueryLockedVaultsPair(QueryLockedVaultsPairRequest) returns (QueryLockedVaultsPairResponse) {
    option (google.api.http).get = "/comdex/liquidation/v1beta1/user_locked_vaults_pair";
  }
}
